crates/wdl-engine/tests/workflows/illegal-access/error.txt
error: object does not have a member named `x`
  ┌─ tests/workflows/illegal-access/source.wdl:8:14
  │
8 │   Int i = my.x  # error: field 'x' does not exist in object
  │              ^

